# stuy-stat-ai

./: poetry.toml  pyproject.toml
rust/: Cargo.toml  out.json  prog.txt
rust/src/: doublets.rs  lib.rs  main.rs
stat/: calc.ipynb
stuy_ai/: 20210210-monkeys.ipynb  linked-list.ipynb  linked_list.py  test.py  tictactoe.py
stuy_ai/ttt-dist/: player-no-types.py  player.py  player1.py
