[tool.poetry]
name = "stuy-ai"
version = "0.1.0"
description = "files for stuy-ai"
authors = ["ruoshui-git <ruoshuim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
scipy = "^1.6.0"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.7"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
